Level I driver support in place

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -1,7 +1,7 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
 <!--
-  2020-11-30
+  2020-12-02
   Example configuration file Unix
   Ake Hedman, akhe@grodansparadis.com
   https://www.grodansparadis.com
@@ -44,10 +44,11 @@
         The MQTT settings here is mainly for the daemon itself. The info will
         also be used for drivers that does not have mqtt data defined.
     -->    
-    <mqtt host="127.0.0.1"
+    <mqtt host="127.0.0.1"            
             port="1883"
             user="vscp"
             password="secret"
+            clientid=""
             qos="0"
             bcleansession="false"
             bretain="false"
@@ -59,9 +60,9 @@
     	    pwkeyfile=""
             format="json" >
         <subscribe topic="vscp/{{guid}}/#"
-                        qos="0"
-                        options="0" />
-        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                    qos="0"
+                    options="0" />
+        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>        
     </mqtt>
 
     <!--
@@ -102,7 +103,7 @@
                     flags="1"
                     translation="0x02"
                     path="/var/lib/vscp/drivers/level1/vscpl1drv-logger.so"
-                    guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:01" >
+                    guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:00" >
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
                     also be used for drivers that does not have mqtt data defined.
@@ -124,7 +125,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>
         </driver>
 
@@ -135,7 +136,7 @@
                 flags="0"
                 translation="0x02"
                 path="/var/lib/vscp/drivers/level1/vscpl1drv-can4vscp.so"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:02" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -158,7 +159,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -172,7 +173,7 @@
                 flags="0"
                 translation="0x02"
                 path="/var/lib/vscp/drivers/level1/vscpl1drv-socketcan.so"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:03" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:03:00:00:00:00:00:00:00" >
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
                     also be used for drivers that does not have mqtt data defined.
@@ -194,7 +195,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -205,7 +206,7 @@
                 flags="0"
                 translation="0x02"
                 path="/var/lib/vscp/drivers/level1/vscpl1drv-can232.so"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:04" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:04:00:00:00:00:00:00:00" >
  
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -228,7 +229,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -251,7 +252,7 @@
                 name="Logger"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-logger.so"
                 path-config="/var/lib/vscp/vscpd/logger2.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:01" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:05:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -274,7 +275,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -283,7 +284,7 @@
                 name="lmsensors"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-lmsensors.so"
                 path-config="/var/lib/vscp/vscpd/lmsensors.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:02" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:06:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -306,7 +307,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -315,7 +316,7 @@
                 name="socketcan"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-socketcan.so"
                 path-config="/var/lib/vscp/vscpd/socketcan.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:03" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:07:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -338,7 +339,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -347,7 +348,7 @@
                 name="mqtt"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-mqtt.so"
                 path-config="/var/lib/vscp/vscpd/mqtt.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:04" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:08:00:00:00:00:00:00:00" >
   
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -370,7 +371,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -379,7 +380,7 @@
                 name="tcpiplink"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-tcpiplink.so"
                 path-config="/var/lib/vscp/vscpd/tcpiplink.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:05" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:09:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -402,7 +403,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -411,7 +412,7 @@
                 name="rawethernet"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-raweth.so"
                 path-config="/var/lib/vscp/vscpd/raweth.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:06" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:0A:00:00:00:00:00:00:00" >
              
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -434,7 +435,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -443,7 +444,7 @@
                 name="sim"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-sim.so"
                 path-config="/var/lib/vscp/vscpd/sim.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:07" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:0B:00:00:00:00:00:00:00" >
 
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -466,7 +467,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
@@ -475,7 +476,7 @@
                 name="1-wire"
                 path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-wire1.so"
                 path-config="/var/lib/vscp/vscpd/wire1.conf"
-                guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:08" >
+                guid="FF:FF:FF:FF:FF:FF:FF:F5:0C:00:00:00:00:00:00:00" >
  
                 <!--
                     The MQTT settings here is mainly for the daemon itself. The info will
@@ -498,7 +499,7 @@
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
-                        <publish topic="vscp/{{guid}}/->/{{class}}/{{type}}"/>
+                        <publish topic="vscp/{{guid}}/{{class}}/{{type}}"/>
                 </mqtt>                    
         </driver>
 
