Added JSON measurement data to event JSON if configured

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -58,7 +58,9 @@
     	    certfile=""
     	    keyfile=""
     	    pwkeyfile=""
-            format="json" >
+            format="json"
+            topic-interface="vscp/{{guid}}/interfaces" >
+            
         <subscribe topic="vscp/{{guid}}/#"
                     qos="0"
                     options="0" />
