--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,9 @@ before_script:
   - sudo apt-get install -qq g++-5
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   - sudo apt-get install -y build-essential
-  - sudo apt-get install -y libwxgtk3.0-dev
   - sudo apt-get install -y libssl-dev
-  - sudo apt-get install -y libpcap0.8-dev
   - sudo apt-get install -y libcurl4-openssl-dev
-  - sudo apt-get install -y libpcap-dev
+  - sudo apt-get install -y libmosquitto-dev
   - g++ --version
 
 script: ./configure && make && sudo make install
