--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -40,6 +40,7 @@ CFLAGS = -std=c99 @CFLAGS@ ${WARNINGS} -DCBC -D_POSIX_SOURCE -I@top_srcdir@ \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
+	-I../../../common/third_party/sqlite3-3.30.1/ \
 	-I../../../common/third_party
 CFLAGS += $(CIVETWEB_FLAGS) 
 CXXFLAGS = -std=c++11 @CXXFLAGS@ ${WARNINGS}
@@ -48,6 +49,7 @@ CPPFLAGS = @CPPFLAGS@ ${WARNINGS} -fno-var-tracking-assignments -I@top_srcdir@ \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
+	-I../../../common/third_party/sqlite3-3.30.1/ \
 	-I../../../common/third_party
 CPPFLAGS += $(CIVETWEB_FLAGS) 
 
@@ -90,7 +92,8 @@ VSCPD_OBJECTS =  vscpd.o \
 	fastpbkdf2.o \
 	vscpmd5.o \
 	vscpbase64.o \
-	vscpdatetime.o
+	vscpdatetime.o \
+	sqlite3.o
 
 ### Targets: ###
 
@@ -159,6 +162,9 @@ fastpbkdf2.o: ../../../common/fastpbkdf2.c ../../../common/fastpbkdf2.h
 vscpmd5.o: ../../../common/vscpmd5.c ../../../common/vscpmd5.h
 	$(CC) $(CFLAGS) -c ../../../common/vscpmd5.c -o $@
 
+sqlite3.o: ../../../common/third_party/sqlite3-3.30.1/sqlite3.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c  ../../../common/third_party/sqlite3-3.30.1/sqlite3.c -o $@
+
 vscpd: $(VSCPD_OBJECTS)
 	$(CXX) -o $@ $(VSCPD_OBJECTS) $(LDFLAGS) $(EXTRALIBS)
 
@@ -166,12 +172,10 @@ install: all install-folders install-configfile install-sample-certs
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) -d $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) vscpd $(DESTDIR)$(bindir)
-	$(INSTALL_PROGRAM) -m 600 ../../../../debian_orig/vscp.key $(DESTDIR)etc/vscp/certs
-	$(INSTALL_PROGRAM) -m 644 debian/README-ca_certificates $(DESTDIR)/etc/vscp/ca_certificates/README
-	$(INSTALL_PROGRAM) -m 600 debian/README-certs $(DESTDIR)/etc/vscp/certs/README
-	$(INSTALL_PROGRAM) -m 600 debian/vscp.key $(DESTDIR)/etc/vscp/certs/vscp.key
-	$(INSTALL_PROGRAM) -m 644 debian/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
-	$(INSTALL_PROGRAM) -m 644 ./service/systemd/vscpd.service.notify $(DESTDIR)/$(libdir)/systemd/system/vscpd.service
+	$(INSTALL_PROGRAM) -m 644 ../../../../install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
+	cp ../service/systemd/vscpd.service.notify /lib/systemd/system/vscpd.service
+	sysctrl enable vscpd
+	sysctrl start vscpd
 
 install-folders:
 	@echo "- Create folder structure."
