Removed server start up from install

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -174,8 +174,8 @@ install: all install-folders install-configfile install-sample-certs
 	$(INSTALL_PROGRAM) vscpd $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) -m 644 ../../../../install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
 	cp ../../../../service/systemd/vscpd.service.notify /lib/systemd/system/vscpd.service
-	systemctl enable vscpd
-	systemctl start vscpd
+#	systemctl enable vscpd
+#	systemctl start vscpd
 
 install-folders:
 	@echo "- Create folder structure."
