Added config debug messages

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -33,11 +33,14 @@
       debug      - Enable debug definitions here. Se debug section of manual for information. 
                    Debugging flags can also be set on the command line but this setting override
 	               any setting that is done there. This is why this section is commented out.
+    
+      classtypedb - Path to the sqlite3 database with VSCP class & type information.
     -->
     <general runasuser="vscp"
              guid="FF:FF:FF:FF:FF:FF:FF:F5:00:00:00:00:00:00:00:01"
              servername="The VSCP daemon" 
              debug="0x00000000" 
+             classtypedb = "/var/lib/vscp/vscpd/vscp_events.sqlite3"
     />
 
     <!--
