Updated xml main config file for latest additions

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -55,6 +55,9 @@
             bcleansession="false"
             bretain="false"
             keepalive="60"
+            reconnect-delay="2"
+            reconnect-delay-max="10"
+            reconnect-exponential-backoff="false"
             cafile=""
     	    capath=""
     	    certfile=""
@@ -104,6 +107,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -138,6 +144,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -174,6 +183,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -208,6 +220,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -254,6 +269,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -286,6 +304,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -318,6 +339,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -350,6 +374,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -382,6 +409,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -414,6 +444,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -446,6 +479,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
@@ -478,6 +514,9 @@
                     bcleansession="false"
                     bretain="false"
                     keepalive="60"
+                    reconnect-delay="2"
+                    reconnect-delay-max="10"
+                    reconnect-exponential-backoff="false"
                     cafile=""
     	            capath=""
     	            certfile=""
