JSON config in place

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,12 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "any": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ranges": "cpp",
+        "stop_token": "cpp"
     },
     "cSpell.words": [
         "Grodans",
