--- a/service/upstart/vscpd.conf
+++ b/service/upstart/vscpd.conf
@@ -5,4 +5,4 @@ start on net-device-up
 
 respawn
 
-exec /usr/local/sbin/vscpd -c /etc/vscp/vscpd.conf
+exec /usr/local/sbin/vscpd -c /etc/vscp/vscpd.json
