--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,12 +18,11 @@ jobs:
     # https://github.com/actions/checkout  
     - uses: actions/checkout@v2
 
-    - name: Checkout vscp repo
+    - name: Checkout google test repo
       uses: actions/checkout@v2
       with:
         repository: google/googletest
         path: googletest
-        ref: development
 
     - name: Update before installing packages
       run: sudo apt-get update
@@ -40,10 +39,10 @@ jobs:
     - name: Install gtest manually
       run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
 
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build
+    # - name: Create Build Environment
+    #   # Some projects don't allow in-source building, so create a separate build directory
+    #   # We'll use this as our working directory for all subsequent commands
+    #   run: cmake -E make_directory ${{github.workspace}}/build
 
     - name: Configure
       run: ./configure --enable-debug
