--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,10 +19,18 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Checkout google test repo
-      uses: actions/checkout@v2
-      with:
-        repository: google/googletest
-        path: googletest
+      run: |
+        sudo apt-get install libgtest-dev
+        cd /usr/src/gtest
+        sudo cmake CMakeLists.txt
+        sudo make
+        sudo cp *.a /usr/lib
+        sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a
+        sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+      # uses: actions/checkout@v2
+      # with:
+      #   repository: google/googletest
+      #   path: googletest
 
     - name: Update before installing packages
       run: sudo apt-get update
@@ -49,6 +57,10 @@ jobs:
 
     - name: build
       run: make  
+
+    #- name: Run Test
+    #  run: /home/runner/work/github_actions_gtest_example/github_actions_gtest_example/build/test/github_actions_gtest_example.test
+
     # - name: Configure CMake
     #   # Use a bash shell so we can use the same syntax for environment variable
     #   # access regardless of the host operating system
