--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,15 +22,13 @@ jobs:
       run: |
         sudo apt-get install libgtest-dev
         cd /usr/src/gtest
-        sudo cmake CMakeLists.txt
-        sudo make
-        sudo cp *.a /usr/lib
-        sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a
-        sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
-      # uses: actions/checkout@v2
-      # with:
-      #   repository: google/googletest
-      #   path: googletest
+        mkdir build
+        cd build 
+        sudo cmake ..
+        sudo make DESTDIR=/usr/lib
+        #sudo cp *.a /usr/lib
+        #sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a
+        #sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
 
     - name: Update before installing packages
       run: sudo apt-get update
@@ -43,9 +41,6 @@ jobs:
 
     - name: Install libssl-dev manually
       run: sudo apt-get install libssl-dev
-
-    - name: Install gtest manually
-      run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
 
     # - name: Create Build Environment
     #   # Some projects don't allow in-source building, so create a separate build directory
