--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         sudo apt-get install libgtest-dev
         cd /usr/src/gtest
-        mkdir build
+        sudo mkdir build
         cd build 
         sudo cmake ..
         sudo make DESTDIR=/usr/lib
