--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -37,6 +37,7 @@ VERSION_DEFS = -DMAJOR_VERSION=$(MAJOR_VERSION) -DMINOR_VERSION=$(MINOR_VERSION)
 
 CFLAGS = -std=c99 @CFLAGS@ ${WARNINGS} -DCBC -D_POSIX_SOURCE -I@top_srcdir@ \
 	-I. \
+	-I/usr/local/include \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
@@ -46,6 +47,7 @@ CFLAGS += $(CIVETWEB_FLAGS)
 CXXFLAGS = -std=c++11 @CXXFLAGS@ ${WARNINGS}
 CPPFLAGS = @CPPFLAGS@ ${WARNINGS} -fno-var-tracking-assignments -I@top_srcdir@ \
 	-I. \
+	-I/usr/local/include \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
