Also installing libpaho

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,8 +24,12 @@ jobs:
     - name: Update before installing packages
       run: sudo apt-get update
 
+    # Will be replaced with paho
     - name: Install libmosuitto-dev manually
       run: sudo apt install libmosquitto-dev
+    
+    - name: Install libpaho-mqtt-dev manually
+      run: sudo apt install libpaho-mqtt-dev
 
     - name: Install libexpat-dev manually
       run: sudo apt install libexpat-dev
